# Decision-tree-filter-in-the-gold-market

./: .env.example  .gitignore  README.md  pyproject.toml
Thesis/: main.tex
Thesis/ReviewersTemplate/: 02-Background.tex  03-Methodology.txt  04-MainResults.tex  05-Conclusion.tex
Thesis/appendices/: 01-Appendix.tex  02-Appendix.tex  bibliographyCompilation.tex  reflections.tex
Thesis/auxiliaryChapters/: 00-DVKKandidatuppsats.tex  01-Abstract.tex  02-Synopsis.tex  03-Acknowledgements.tex  04-ListAbbreviations.tex
Thesis/bibliographyFiles/: bibliography.bib
Thesis/figures/templateFigures/: SU-Logga-Svensk.eps
Thesis/mainChapters/: 01-Introduction.tex  02-Background.tex  03-Methodology.tex  04-MainResults.tex  05-Conclusion.tex
Thesis/packagesAndCommands/: commands.tex  usepackage.tex
configs/: run_config.example.json  run_config.thesis_us500_h1.json  run_config.xauusd_h1.json  run_config.xauusd_h1_smoke.json  run_config.xauusd_h4.json
mql5/: README.md
mql5/Experts/: DecisionTreeMultiIndicatorEA.mq5
mql5/Include/: TreeGate.mqh
src/: __init__.py  backtest.py  check_mt5_connection.py  config.py  experiment.py  metrics.py  mt5_client.py  plots.py  time_utils.py
src/run/: __init__.py  artifacts.py  cli.py  configuration.py  market.py  output_files.py  pipeline.py  suites.py  tree_analysis.py
src/strategy/: __init__.py  indicators.py  signals.py
src/tree/: __init__.py  confidence_bands.py  feature_matrix.py  mql_export.py  outcome_labels.py  training.py
tests/: test_backtest.py  test_experiment.py  test_mt5_client.py  test_tree.py
(+4 files in other folders)
